--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Colorful Calculator</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <title>Stone Paper Scissors</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-  <div class="calculator">
-    <div class="display" id="display">0</div>
-    <div class="buttons">
-        <button class="btn-number" onclick="append('9')">9</button>
-        <button class="btn-number" onclick="append('8')">8</button>
-        <button class="btn-number" onclick="append('7')">7</button>
-        <button class="btn-operator" onclick="append('+')">+</button>
-
-        <button class="btn-number" onclick="append('6')">6</button>
-        <button class="btn-number" onclick="append('5')">5</button>
-        <button class="btn-number" onclick="append('4')">4</button>
-        <button class="btn-operator" onclick="append('-')">-</button>
-
-        <button class="btn-number" onclick="append('3')">3</button>
-        <button class="btn-number" onclick="append('2')">2</button>
-        <button class="btn-number" onclick="append('1')">1</button>
-        <button class="btn-operator" onclick="append('*')">*</button>
-        
-        <button class="btn-clear" onclick="clearDisplay()">C</button>
-        <button class="btn-number" onclick="append('0')">0</button>
-        <button class="btn-equal" onclick="calculate()">=</button>
-        <button class="btn-operator" onclick="append('/')">/</button>
-
+    <div class="game-container">
+        <h1>Stone Paper Scissors</h1>
+        <div class="score-board">
+            <div id="user-score">0</div> : <div id="computer-score">0</div>
+        </div>
+        <div class="choices">
+            <div class="choice" onclick="play('stone')">
+                <img src="https://img.icons8.com/emoji/96/rock-emoji.png" alt="Stone">
+                <p>Stone</p>
+            </div>
+            <div class="choice" onclick="play('paper')">
+                <img src="https://img.icons8.com/emoji/96/page-facing-up.png" alt="Paper">
+                <p>Paper</p>
+            </div>
+            <div class="choice" onclick="play('scissors')">
+                <img src="https://img.icons8.com/emoji/96/scissors-emoji.png" alt="Scissors">
+                <p>Scissors</p>
+            </div>
+        </div>
+        <div class="result">
+            <p id="user-choice">You chose: </p>
+            <p id="computer-choice">Computer chose: </p>
+            <h2 id="winner"></h2>
+        </div>
     </div>
-  </div>
-  <script src="script.js"></script>
+
+    <script src="script.js"></script>
 </body>
 </html>
